styles applied to the index page

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,9 +1,9 @@
-<nav>
+<nav class="nav-container">
     <ul>
-        <li>Home</li>
-        <li>Custom</li>
-        <li>Sedan</li>
-        <li>SUV</li>
-        <li>Truck</li>
+        <li><a href="/">Home</li></a>
+        <li><a href="/">Custom</li></a>
+        <li><a href="/">Sedan</li></a>
+        <li><a href="/">SUV</li></a>
+        <li><a href="/">Truck</li></a>
     </ul>
 </nav>
