--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -1,19 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <%- include('../partials/head') %>
-
-
 <body>
-    <div id="wrapper">
+    <div id="wrapper" class="wrapper-container">
         <%- include('../partials/header') %>
         <%- include('../partials/navigation') %>
-
         <main>
             <%- body %>
         </main>
-
         <%- include('../partials/footer') %>
     </div>
-
 </body>
 </html>
