--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,4 +1,4 @@
-<nav class="nav-container">
+<!-- <nav class="nav-container">
     <ul>
         <li><a href="/">Home</li></a>
         <li><a href="/">Custom</li></a>
@@ -6,4 +6,8 @@
         <li><a href="/">SUV</li></a>
         <li><a href="/">Truck</li></a>
     </ul>
+</nav> -->
+
+<nav class="nav-container">
+    <%- nav %>
 </nav>
